# taskmaster

./: .gitignore  Cargo.toml  ConfigFile_Documentation  Readme.md  configFileVar  load.sh  note.txt  simple_script.stdout  simple_script1.stdout  taskmasterSteps  test.c  test.py
confs/: logfile  taskmaster_confs.yaml
src/: daemon.rs  main.rs  mainctl.rs  maind.rs  parsing.rs  server.rs  taskmasterctl.rs  taskmasterd.rs
src/client/: taskmasterctl.rs
src/client/taskmasterctl/: command.rs
src/daemon/: taskmasterd.rs
src/daemon/taskmasterd/: command.rs  initconfig.rs  parsing.rs  server.rs
src/daemon/taskmasterd/initconfig/: checker.rs  parsing.rs
src/daemon/taskmasterd/server/: bidirmsg.rs  logfile.rs
src/server/: taskmasterd.rs
src/server/taskmasterd/: server.rs
src/taskmasterd/: parsing.rs
