[package]
name = "Taskmaster"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "taskmasterctl"
path = "src/client.rs"

[[bin]]
name = "taskmasterd"
path = "src/server.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_derive = "1.0"
rustyline = "14.0.0"
ctrlc = "3.4"
anyhow = "^1.0.42"